Bug 1291013 - Adjust closed caption button spacing. r?jaws
MozReview-Commit-ID: 68jaHKezap1

--- a/toolkit/themes/osx/global/media/videocontrols.css
+++ b/toolkit/themes/osx/global/media/videocontrols.css
@@ -67,7 +67,7 @@
 }
 
 .closedCaptionButton {
-  background-image: url(chrome://global/skin/media/closeCaptionButton.png);
+  background: url(chrome://global/skin/media/closeCaptionButton.png) 4px;
 }
 
 .closedCaptionButton[enabled] {
@@ -142,9 +142,9 @@
   background-color: rgba(0,0,0,.55);
 }
 
-.controlBar[fullscreen-unavailable] > .volumeStack {
+.controlBar[fullscreen-unavailable] {
   /* This value is duplicated in the videocontrols.xml adjustControlSize function. */
-  margin-inline-end: 8px;
+  padding-inline-end: 8px;
 }
 
 .volumeControl .scale-thumb {
@@ -390,8 +390,8 @@ html|table {
     background-image: url(chrome://global/skin/media/noAudio@2x.png);
     background-size: 33px 28px;
   }
-  .closeCaptionButton {
-    background-image: url(chrome://global/skin/media/closeCaptionButton@2x.png);
+  .closedCaptionButton {
+    background: url(chrome://global/skin/media/closeCaptionButton@2x.png) 4px;
     background-size: 28px 28px;
   }
   .fullscreenButton {
